--- a/ecom/templates/ecom/layout.html
+++ b/ecom/templates/ecom/layout.html
@@ -6,7 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{{ title }}</title>
         {% tailwind_css %}
-        <script src="{% static "js/htmx/htmx.min.js" %}" defer></script>
+        <script src="{% static "js/htmx.min.js" %}" defer></script>
+        <script src="{% static "js/main.js" %}" defer></script>
     </head>
     <body>
         <main>
