--- a/ecom/templates/ecom/order_list.html
+++ b/ecom/templates/ecom/order_list.html
@@ -5,35 +5,37 @@
         <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
             <tr>
                 <th scope="col" class="px-6 py-3">
-                    Name
+                    #
                 </th>
                 <th scope="col" class="px-6 py-3">
-                    Price
+                    Status
                 </th>
                 <th scope="col" class="px-6 py-3">
-                    Stock
+                    User
                 </th>
                 <th scope="col" class="px-6 py-3">
-                    Description
+                    Note
                 </th>
             </tr>
         </thead>
         <tbody>
-            {% for product in available_products %}
-                    <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
+            {% for order in order_list %}
+                <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
+                    <a href="#" class="hover:underline hover:underline-offset-auto">
                         <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                            <a href="#" class="hover:underline hover:underline-offset-auto">{{ product.name|title }}</a>
+                            {{ order.id }}
                         </th>
-                        <td class="px-6 py-4">
-                            ${{ product.price|floatformat:"-2g" }}
-                        </td>
-                        <td class="px-6 py-4">
-                            {{ product.stock }}
-                        </td>
-                        <td class="px-6 py-4">
-                            {{ product.desc|truncatewords:8 }}
-                        </td>
-                    </tr>
+                    </a>
+                    <td class="px-6 py-4">
+                        {{ order.status }}
+                    </td>
+                    <td class="px-6 py-4">
+                        {{ order.user.username }}
+                    </td>
+                    <td class="px-6 py-4">
+                        {% if order.note %}<a href="#" class="hover:underline hover:underline-offset-auto">{{ order.note|truncatewords:8 }}</a>{% endif %}
+                    </td>
+                </tr>
             {% endfor %}
         </tbody>
     </table>
