Updated quote style

--- a/ecom/templates/ecom/cart.html
+++ b/ecom/templates/ecom/cart.html
@@ -1,4 +1,4 @@
-{% extends 'ecom/layout.html' %}
+{% extends "ecom/layout.html" %}
 {% block content %}
 <h1 class="text-3xl text-gray-600 dark:text-white">Cart</h1>
 {% for cartitem in cart.items %}
