--- a/ecom/templates/ecom/product_detail.html
+++ b/ecom/templates/ecom/product_detail.html
@@ -1,6 +1,6 @@
 {% extends "ecom/layout.html" %}
 {% block content %}
-    {% if product.images %}
+    {% if images %}
     <div id="carousel-container" class="relative max-w-screen-md">
         <div class="relative h-56 overflow-hidden rounded-lg md:h-96">
             {% for image in images %}
