--- a/ecom/templates/ecom/product_list.html
+++ b/ecom/templates/ecom/product_list.html
@@ -19,10 +19,10 @@
             </tr>
         </thead>
         <tbody>
-            {% for product in available_products %}
+            {% for product in products %}
                     <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
                         <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                            <a href="#" class="hover:underline hover:underline-offset-auto">{{ product.name|title }}</a>
+                            <a href="{% url 'product detail' product.slug %}" class="hover:underline hover:underline-offset-auto">{{ product.name|title }}</a>
                         </th>
                         <td class="px-6 py-4">
                             ${{ product.price|floatformat:"-2g" }}
