--- a/ecom/templates/ecom/product_list.html
+++ b/ecom/templates/ecom/product_list.html
@@ -20,20 +20,7 @@
         </thead>
         <tbody>
             {% for product in products %}
-                    <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
-                        <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                            <a href="{% url 'product detail' product.slug %}" class="hover:underline hover:underline-offset-auto">{{ product.name|title }}</a>
-                        </th>
-                        <td class="px-6 py-4">
-                            ${{ product.price|floatformat:"-2g" }}
-                        </td>
-                        <td class="px-6 py-4">
-                            {{ product.stock }}
-                        </td>
-                        <td class="px-6 py-4">
-                            {{ product.desc|truncatewords:8 }}
-                        </td>
-                    </tr>
+                {% include "ecom/partials/product_list.html" with product=product only %}
             {% endfor %}
         </tbody>
     </table>
