Simplified views and templates

--- a/ecom/templates/ecom/order_list.html
+++ b/ecom/templates/ecom/order_list.html
@@ -20,6 +20,7 @@
         </thead>
         <tbody>
             {% for order in order_list %}
+                {% include "ecom/partials/order_list.html" with order=order only %}
             {% endfor %}
         </tbody>
     </table>
