Removed logic in partial files

--- a/ecom/templates/ecom/product_list.html
+++ b/ecom/templates/ecom/product_list.html
@@ -19,7 +19,7 @@
             </tr>
         </thead>
         <tbody>
-            {% for product in products %}
+            {% for product in available_products %}
                 {% include "ecom/partials/product_list.html" with product=product only %}
             {% endfor %}
         </tbody>
