Fixed cartitem partial

--- a/ecom/templates/ecom/cartitem_list.html
+++ b/ecom/templates/ecom/cartitem_list.html
@@ -17,7 +17,9 @@
         </thead>
         <tbody>
             <div id="cartitems-container">
-            {% include "ecom/partials/cartitem_list.html" with cartitems=cartitems %}
+            {% for cartitem in cartitems %}
+                {% include "ecom/partials/cartitem_list.html" with cartitem=cartitem only %}
+            {% endfor %}
             </div>
         </tbody>
     </table>
